--- a/stack_exchange/engage/stack_exchange_feature_eng.ipynb
+++ b/stack_exchange/engage/stack_exchange_feature_eng.ipynb
@@ -141,7 +141,7 @@
     "    conn.sql('create table votes as select * from votes')\n",
     "    conn.sql('create table badges as select * from badges')\n",
     "    conn.sql('create table comments as select * from comments')\n",
-    "    with open('round1_feats.sql', 'r') as query:\n",
+    "    with open('feats.sql', 'r') as query:\n",
     "        # run once with train_labels and once with val_labels\n",
     "        conn.sql(query.read())"
    ]
