Clean up feature eng notebook

--- a/stack_exchange/engage/stack_exchange_feature_eng.ipynb
+++ b/stack_exchange/engage/stack_exchange_feature_eng.ipynb
@@ -92,27 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/adobles/projects/snap/relbench-user-study/stack_exchange\n"
+     ]
+    }
+   ],
    "source": [
     "cd .."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import duckdb\n",
-    "import pandas as pd\n",
-    "from relbench.datasets import get_dataset\n",
-    "from torch_frame import TaskType, stype\n",
-    "from torch_frame.gbdt import LightGBM, XGBoost\n",
-    "from torch_frame.data import Dataset\n",
-    "from torch_frame.typing import Metric\n",
-    "from torch_frame.utils import infer_df_stype"
    ]
   },
   {
@@ -121,52 +113,103 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conn = duckdb.connect('stackex.db')\n",
-    "FIRST_TIME = False  # if not, read it from stackex.db\n",
+    "import duckdb\n",
+    "from torch_frame import TaskType, stype\n",
+    "from torch_frame.gbdt import XGBoost\n",
+    "from torch_frame.data import Dataset\n",
+    "from torch_frame.typing import Metric\n",
+    "from torch_frame.utils import infer_df_stype\n",
     "\n",
-    "if FIRST_TIME:\n",
-    "    dataset = get_dataset(name='rel-math-stackex', process=True)\n",
-    "    task = dataset.get_task('rel-stackex-engage', process=True)\n",
-    "    train_labels = task.train_table.df\n",
-    "    val_labels = task.val_table.df\n",
-    "    users = dataset.db.table_dict['users'].df\n",
-    "    posts = dataset.db.table_dict['posts'].df\n",
-    "    votes = dataset.db.table_dict['votes'].df\n",
-    "    badges = dataset.db.table_dict['badges'].df\n",
-    "    comments = dataset.db.table_dict['comments'].df\n",
-    "    conn.sql('create table train_labels as select * from train_labels')\n",
-    "    conn.sql('create table val_labels as select * from val_labels')\n",
-    "    conn.sql('create table users as select * from users')\n",
-    "    conn.sql('create table posts as select * from posts')\n",
-    "    conn.sql('create table votes as select * from votes')\n",
-    "    conn.sql('create table badges as select * from badges')\n",
-    "    conn.sql('create table comments as select * from comments')\n",
-    "    with open('feats.sql', 'r') as query:\n",
-    "        # run once with train_labels and once with val_labels\n",
-    "        conn.sql(query.read())"
+    "import utils"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "making Database object from raw files...\n",
+      "Loading data from: /Users/adobles/Library/Caches/pooch/25a03b9a227fa6fadbd949a4ea4721f2-relbench-stackex-raw/math-stackex-temp\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/adobles/projects/snap/relbench/relbench/datasets/math_stackex.py:56: DtypeWarning: Columns (0,1,2,3,5) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  comments = pd.read_csv(os.path.join(path, \"Comments.csv\"))\n",
+      "/Users/adobles/projects/snap/relbench/relbench/datasets/math_stackex.py:62: DtypeWarning: Columns (1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  postHistory = pd.read_csv(os.path.join(path, \"PostHistory.csv\"))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data loaded\n",
+      "Percentage of rows removed due to invalid dates: 4.21%\n",
+      "Percentage of rows removed due to invalid dates: 0.00%\n",
+      "Percentage of rows removed due to invalid dates: 0.00%\n",
+      "Percentage of rows removed due to invalid dates: 0.00%\n",
+      "Percentage of rows removed due to invalid dates: 0.00%\n",
+      "Percentage of rows removed due to invalid dates: 0.00%\n",
+      "Percentage of rows removed due to invalid dates: 0.00%\n",
+      "done in 213.57 seconds.\n",
+      "reindexing pkeys and fkeys...\n",
+      "done in 24.55 seconds.\n"
+     ]
+    }
+   ],
    "source": [
-    "train_df = conn.sql('select * from churn_feats_train').df()"
+    "FIRST_TIME = True\n",
+    "\n",
+    "if FIRST_TIME:\n",
+    "    utils.db_setup('stackex.db')\n",
+    "\n",
+    "conn = duckdb.connect('stackex.db')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "val_df = conn.sql('select * from churn_feats_val').df()"
+    "with open('engage/feats.sql', 'r') as f:\n",
+    "    # run once with train_labels and once with val_labels\n",
+    "    template = f.read()\n",
+    "\n",
+    "# create train, val and test features\n",
+    "for s in ['train', 'val', 'test']:\n",
+    "    query = utils.render_jinja_sql(template, dict(set=s))\n",
+    "    conn.sql(query)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df = conn.sql('select * from engage_train_feats').df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_df = conn.sql('select * from engage_val_feats').df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +263,6 @@
        " 'avg_commenter_badge_score_q': <stype.numerical: 'numerical'>,\n",
        " 'last_a_weeks_ago': <stype.numerical: 'numerical'>,\n",
        " 'last_a_is_accepted_ans': <stype.categorical: 'categorical'>,\n",
-       " 'last_a_num_tags': <stype.categorical: 'categorical'>,\n",
        " 'last_a_body_length': <stype.numerical: 'numerical'>,\n",
        " 'last_a_num_positive_votes': <stype.numerical: 'numerical'>,\n",
        " 'last_a_num_negative_votes': <stype.numerical: 'numerical'>,\n",
@@ -240,7 +282,7 @@
        " 'avg_commenter_badge_score_a': <stype.numerical: 'numerical'>}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,60 +293,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
+    "DROP_COLS = [\n",
+    "    # drop identifier cols\n",
+    "    'user_id',\n",
+    "    'timestamp',\n",
+    "    # drop due to potential leakage\n",
+    "    'display_name_is_null',\n",
+    "    'website_url_is_null',\n",
+    "    'about_me_length',\n",
+    "    'location_is_null',\n",
+    "    'last_q_has_accepted_ans',\n",
+    "    'avg_has_accepted_ans',\n",
+    "    'last_a_is_accepted_ans'\n",
+    "]\n",
+    "for c in DROP_COLS:\n",
+    "    del col_to_stype[c]\n",
     "# Correct certain columns\n",
-    "col_to_stype.pop('user_id')\n",
-    "col_to_stype.pop('timestamp')\n",
     "col_to_stype['weeks_since_last_comment'] = stype.numerical\n",
     "col_to_stype['last_q_weeks_ago'] = stype.numerical\n",
-    "col_to_stype['last_q_num_tags'] = stype.numerical\n",
-    "col_to_stype['last_a_num_tags'] = stype.numerical"
+    "col_to_stype['last_q_num_tags'] = stype.numerical"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dset = Dataset(\n",
+    "    train_df.drop(DROP_COLS, axis=1),\n",
+    "    col_to_stype=col_to_stype,\n",
+    "    target_col='contribution'\n",
+    ").materialize()\n",
+    "val_tf = train_dset.convert_to_tensor_frame(val_df.drop(DROP_COLS, axis=1))\n",
+    "tune_metric = Metric.ROCAUC\n",
+    "print(train_dset.tensor_frame.num_cols, train_dset.tensor_frame.num_rows)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[I 2024-04-10 08:43:35,190] A new study created in memory with name: no-name-aa282125-ab1a-4469-aad7-8f70d054ea89\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "54 300850\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[I 2024-04-10 08:45:00,830] Trial 0 finished with value: 0.878076851125296 and parameters: {'booster': 'gbtree', 'use_lambda': True, 'lambda': 5.138949943270201e-06, 'use_alpha': True, 'alpha': 0.030536441617625563, 'max_depth': 3, 'min_child_weight': 3.401918560064873e-08, 'subsample': 0.6928036765610066, 'colsample_bytree': 0.8964352494415788, 'colsample_bylevel': 0.5752953649634576, 'use_gamma': False, 'learning_rate': 0.0013249969257018485}. Best is trial 0 with value: 0.878076851125296.\n",
-      "/Users/adobles/opt/anaconda3/envs/relbench/lib/python3.11/site-packages/xgboost/core.py:160: UserWarning: [08:45:00] WARNING: /Users/runner/work/xgboost/xgboost/src/learner.cc:742: \n",
-      "Parameters: { \"use_alpha\", \"use_gamma\", \"use_lambda\" } are not used.\n",
-      "\n",
-      "  warnings.warn(smsg, UserWarning)\n"
+      "/Users/adobles/opt/anaconda3/envs/relbench/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "[I 2024-04-18 16:26:03,544] A new study created in memory with name: no-name-9aafe562-f6ed-4f19-975c-ff1c641a897c\n"
      ]
     }
    ],
    "source": [
-    "train_dset = Dataset(\n",
-    "    train_df.drop(['user_id', 'timestamp'], axis=1),\n",
-    "    col_to_stype=col_to_stype,\n",
-    "    target_col='contribution'\n",
-    ").materialize()\n",
-    "val_tf = train_dset.convert_to_tensor_frame(val_df.drop(['user_id', 'timestamp'], axis=1))\n",
-    "tune_metric = Metric.ROCAUC\n",
-    "\n",
-    "print(train_dset.tensor_frame.num_cols, train_dset.tensor_frame.num_rows)\n",
     "gbdt = XGBoost(TaskType.BINARY_CLASSIFICATION, num_classes=2, metric=tune_metric)\n",
     "gbdt.tune(tf_train=train_dset.tensor_frame, tf_val=val_tf, num_trials=1)"
    ]
@@ -313,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Eval"
+    "### Val Eval"
    ]
   },
   {
@@ -322,11 +367,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "import plotly.graph_objects as go\n",
-    "from sklearn.metrics import roc_curve, average_precision_score, accuracy_score, PrecisionRecallDisplay\n",
-    "\n",
-    "import utils"
+    "from sklearn.metrics import roc_curve, average_precision_score, accuracy_score, PrecisionRecallDisplay"
    ]
   },
   {
@@ -702,7 +744,7 @@
    "source": [
     "(\n",
     "    utils\n",
-    "    .feature_summary_df(val_df.drop(['user_id', 'timestamp'], axis=1), 'contribution')\n",
+    "    .feature_summary_df(val_df.drop(DROP_COLS, axis=1), 'contribution')\n",
     "    .style\n",
     "    .format('{:.3f}', subset=['Label Corr.', 'Label MI'])\n",
     "    .format('{:.1%}', subset=['NaN %'])\n",
@@ -89774,91 +89816,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 127,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    }
-   ],
    "source": [
-    "%load_ext sql\n",
-    "%sql conn --alias duckdb\n",
-    "%config SqlMagic.displaycon=False"
+    "### Test Eval"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <thead>\n",
-       "        <tr>\n",
-       "            <th>total_users</th>\n",
-       "            <th>never_posted</th>\n",
-       "            <th>pct_never_posted</th>\n",
-       "            <th>never_commented</th>\n",
-       "            <th>pct_never_commented</th>\n",
-       "            <th>never_nothing</th>\n",
-       "            <th>pct_never_nothing</th>\n",
-       "        </tr>\n",
-       "    </thead>\n",
-       "    <tbody>\n",
-       "        <tr>\n",
-       "            <td>439116</td>\n",
-       "            <td>140546</td>\n",
-       "            <td>0.32006576849852886</td>\n",
-       "            <td>236811</td>\n",
-       "            <td>0.5392903014237695</td>\n",
-       "            <td>135354</td>\n",
-       "            <td>0.3082420134998497</td>\n",
-       "        </tr>\n",
-       "    </tbody>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "+-------------+--------------+---------------------+-----------------+---------------------+---------------+--------------------+\n",
-       "| total_users | never_posted |   pct_never_posted  | never_commented | pct_never_commented | never_nothing | pct_never_nothing  |\n",
-       "+-------------+--------------+---------------------+-----------------+---------------------+---------------+--------------------+\n",
-       "|    439116   |    140546    | 0.32006576849852886 |      236811     |  0.5392903014237695 |     135354    | 0.3082420134998497 |\n",
-       "+-------------+--------------+---------------------+-----------------+---------------------+---------------+--------------------+"
-      ]
-     },
-     "execution_count": 137,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "%%sql\n",
-    "-- num users who have never posted\n",
-    "select\n",
-    "    count(*) as total_users,\n",
-    "    sum((p.OwnerUserId is null)::int) as never_posted,\n",
-    "    never_posted / count(*) as pct_never_posted,\n",
-    "    sum((c.UserId is null)::int) as never_commented,\n",
-    "    never_commented / count(*) as pct_never_commented,\n",
-    "    sum((coalesce(p.OwnerUserId, c.UserId) is null)::int) never_nothing,\n",
-    "    never_nothing / count(*) as pct_never_nothing\n",
-    "from users\n",
-    "left join (select distinct OwnerUserId from posts) as p\n",
-    "    on users.Id = p.OwnerUserId\n",
-    "left join (select distinct UserId from comments) as c\n",
-    "    on users.Id = c.UserId"
+    "import numpy as np\n",
+    "from relbench.datasets import get_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "task = get_dataset('rel-math-stackex').get_task('engage')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_df = conn.sql('select * from engage_test_feats').df()\n",
+    "test_tf = train_dset.convert_to_tensor_frame(test_df.drop(DROP_COLS, axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pred = gbdt.predict(tf_test=test_tf)\n",
+    "preds = {uid: p for uid, p in zip(test_df.user_id, pred)}\n",
+    "pred = np.array([preds[uid] for uid in task.test_table.df.OwnerUserId])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "task.evaluate(pred)"
    ]
   },
   {
