--- a/hm/hm_eda.ipynb
+++ b/hm/hm_eda.ipynb
@@ -31,8 +31,7 @@
    "metadata": {},
    "source": [
     "## Schema\n",
-    "\n",
-    "TODO link"
+    "![](hm_schema.png)"
    ]
   },
   {
@@ -482,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +798,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,18 +811,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Categoricals\n",
-    "- `section_no`/`section_name`\n",
-    "- `garment_group_no`/`garment_group_name`\n",
-    "- `index_group_no`/`index_group_name`\n",
-    "- `index_group_no`/`index_group_name`\n",
-    "- `section_no`/`section_name`\n",
-    "- `section_no`/`section_name`"
+    "### Categoricals\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1377,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1385,7 +1378,7 @@
     "mi = mutual_info_regression(\n",
     "    joined[\n",
     "        ['product_type_no', 'perceived_colour_master_id', 'graphical_appearance_no',\n",
-    "         'index_group_no', 'department_no', 'section_no', 'garment_group_no']\n",
+    "         'index_group_no', 'department_no', 'section_no', 'garment_group_no', 'colour_group_code']\n",
     "    ].values,\n",
     "    joined['sales'].values\n",
     ")"
@@ -1393,23 +1386,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "department_no                 0.081930\n",
-       "section_no                    0.072581\n",
-       "index_group_no                0.043824\n",
-       "product_type_no               0.040299\n",
-       "garment_group_no              0.039491\n",
-       "perceived_colour_master_id    0.019843\n",
-       "graphical_appearance_no       0.007143\n",
+       "department_no                 0.082520\n",
+       "section_no                    0.070054\n",
+       "index_group_no                0.040517\n",
+       "product_type_no               0.039509\n",
+       "garment_group_no              0.035272\n",
+       "perceived_colour_master_id    0.018759\n",
+       "colour_group_code             0.017110\n",
+       "graphical_appearance_no       0.012033\n",
        "dtype: float64"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,7 +1413,7 @@
     "    col: mi \n",
     "    for col, mi in zip(\n",
     "        ['product_type_no', 'perceived_colour_master_id', 'graphical_appearance_no',\n",
-    "         'index_group_no', 'department_no', 'section_no', 'garment_group_no'],\n",
+    "         'index_group_no', 'department_no', 'section_no', 'garment_group_no', 'colour_group_code'],\n",
     "        mi\n",
     "    )\n",
     "}).sort_values(ascending=False)"
@@ -1432,8 +1426,8 @@
     "Notes:\n",
     "- article table pretty much categoricals only\n",
     "- Many columns overlap\n",
-    "- Probably going for `department_no` and `section_no` as the others are coarser categorizations of\n",
-    "the same things (+ color seems to be uninformative)."
+    "- Probably going for `department_no`, `section_no`, `perceived_colour_master_id` as the others are coarser categorizations of\n",
+    "the same things."
    ]
   },
   {
@@ -2665,6 +2659,19 @@
     "- Seasonality: sales peak in summer months\n",
     "- Very high variability in number/amount of sales week-over-week\n",
     "- Prices are more stable but do exhibit some variability downwards (ie discounts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {
+    "vscode": {
+     "languageId": "sql"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "conn.close()"
    ]
   },
   {
