--- a/amazon/amazon_eda.ipynb
+++ b/amazon/amazon_eda.ipynb
@@ -13,7 +13,7 @@
     "import plotly.express as px\n",
     "\n",
     "\n",
-    "# run utils.setup to set up duckdb database\n",
+    "# run utils.db_setup to set up duckdb database\n",
     "conn = duckdb.connect('amazon.db')\n",
     "%load_ext sql\n",
     "%sql conn --alias duckdb\n",
