Rename stackex dataset and tasks

--- a/stack_exchange/badges/badges.ipynb
+++ b/stack_exchange/badges/badges.ipynb
@@ -585,7 +585,7 @@
     "from inferred_stypes import task_to_stypes\n",
     "from train_gbdt import TASK_PARAMS\n",
     "\n",
-    "TASK = 'rel-stackex-badges'\n",
+    "TASK = 'rel-stack-user-badge'\n",
     "\n",
     "task_params = TASK_PARAMS[TASK]"
    ]
