--- a/stack_exchange/engage/engage.ipynb
+++ b/stack_exchange/engage/engage.ipynb
@@ -638,7 +638,7 @@
     "from inferred_stypes import task_to_stypes\n",
     "from train_gbdt import TASK_PARAMS\n",
     "\n",
-    "TASK = 'rel-stackex-engage'\n",
+    "TASK = 'rel-stack-user-engagement'\n",
     "\n",
     "task_params = TASK_PARAMS[TASK]"
    ]
