--- a/stack_exchange/stack_exchange_eda.ipynb
+++ b/stack_exchange/stack_exchange_eda.ipynb
@@ -38,7 +38,7 @@
     }
    ],
    "source": [
-    "dataset = get_dataset(name='rel-stackex', process=True)"
+    "dataset = get_dataset(name='rel-stack', process=True)"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `rel-stackex-engage`\n",
+    "### `user-engagement`\n",
     "\n",
     "Task is to predict if a user will make any engagement (vote, comment or post) on the site in the\n",
     "next 2 years.\n",
@@ -100,7 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('rel-stackex-engage', process=True)"
+    "task = dataset.get_task('user-engagement', process=True)"
    ]
   },
   {
@@ -318,7 +318,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `rel-stackex-votes`\n",
+    "### `post-votes`\n",
     "\n",
     "Task is to predict if the number of upvotes a question will get in the following 6 months.\n",
     "\n",
@@ -333,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('rel-stackex-votes', process=True)"
+    "task = dataset.get_task('user-votes', process=True)"
    ]
   },
   {
@@ -585,16 +585,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `rel-stackex-badges`\n",
+    "### `user-badge`\n",
     "\n",
-    "TODO Fill out\n",
     "Task is to predict if the number of upvotes a question will get in the following 6 months.\n",
-    "\n",
-    "Filter: questions older than 2 years before timestamp to avoid predictions on stale questions.\n",
     "\n",
     "ML task: Binary Classification\n",
     "\n",
-    "Evaluation Metric: AUC?"
+    "Evaluation Metric: AUC"
    ]
   },
   {
@@ -603,7 +600,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('rel-stackex-badges', process=True)"
+    "task = dataset.get_task('user-badge', process=True)"
    ]
   },
   {
