--- a/stack_exchange/votes/votes.ipynb
+++ b/stack_exchange/votes/votes.ipynb
@@ -387,7 +387,7 @@
     "from inferred_stypes import task_to_stypes\n",
     "from train_gbdt import TASK_PARAMS\n",
     "\n",
-    "TASK = 'rel-stackex-votes'\n",
+    "TASK = 'rel-stack-post-votes'\n",
     "\n",
     "task_params = TASK_PARAMS[TASK]"
    ]
