Rename amazon tasks

--- a/amazon/ltv/ltv.ipynb
+++ b/amazon/ltv/ltv.ipynb
@@ -782,7 +782,7 @@
     "from inferred_stypes import task_to_stypes\n",
     "from train_gbdt import TASK_PARAMS\n",
     "\n",
-    "TASK = 'rel-amazon-ltv'\n",
+    "TASK = 'rel-amazon-user-ltv'\n",
     "\n",
     "task_params = TASK_PARAMS[TASK]"
    ]
