--- a/amazon/product-churn/product-churn.ipynb
+++ b/amazon/product-churn/product-churn.ipynb
@@ -435,7 +435,7 @@
     "from inferred_stypes import task_to_stypes\n",
     "from train_gbdt import TASK_PARAMS\n",
     "\n",
-    "TASK = 'rel-amazon-product-churn'\n",
+    "TASK = 'rel-amazon-item-churn'\n",
     "\n",
     "task_params = TASK_PARAMS[TASK]"
    ]
