--- a/amazon/product-ltv/product-ltv.ipynb
+++ b/amazon/product-ltv/product-ltv.ipynb
@@ -676,7 +676,7 @@
     "from inferred_stypes import task_to_stypes\n",
     "from train_gbdt import TASK_PARAMS\n",
     "\n",
-    "TASK = 'rel-amazon-product-ltv'\n",
+    "TASK = 'rel-amazon-item-ltv'\n",
     "\n",
     "task_params = TASK_PARAMS[TASK]"
    ]
