--- a/amazon/churn/churn.ipynb
+++ b/amazon/churn/churn.ipynb
@@ -436,7 +436,7 @@
     "from inferred_stypes import task_to_stypes\n",
     "from train_gbdt import TASK_PARAMS\n",
     "\n",
-    "TASK = 'rel-amazon-churn'\n",
+    "TASK = 'rel-amazon-user-churn'\n",
     "\n",
     "task_params = TASK_PARAMS[TASK]"
    ]
