Update hm task names

--- a/hm/churn/churn.ipynb
+++ b/hm/churn/churn.ipynb
@@ -724,7 +724,7 @@
     "from inferred_stypes import task_to_stypes\n",
     "from train_gbdt import TASK_PARAMS\n",
     "\n",
-    "TASK = 'rel-hm-churn'\n",
+    "TASK = 'rel-hm-user-churn'\n",
     "\n",
     "task_params = TASK_PARAMS[TASK]"
    ]
