--- a/hm/hm_eda.ipynb
+++ b/hm/hm_eda.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "## Tasks\n",
     "\n",
-    "### `rel-hm-churn`\n",
+    "### `rel-hm-user-churn`\n",
     "\n",
     "Task is to predict 1-week churn for customers.\n",
     "\n",
@@ -287,7 +287,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `rel-hm-sales`\n",
+    "### `rel-hm-item-sales`\n",
     "\n",
     "Task is to predict the total sales for an article (the sum of prices of the associated transactions) in the next week.\n",
     "\n",
