--- a/hm/sales/sales.ipynb
+++ b/hm/sales/sales.ipynb
@@ -555,7 +555,7 @@
     "from inferred_stypes import task_to_stypes\n",
     "from train_gbdt import TASK_PARAMS\n",
     "\n",
-    "TASK = 'rel-hm-sales'\n",
+    "TASK = 'rel-hm-item-sales'\n",
     "\n",
     "task_params = TASK_PARAMS[TASK]"
    ]
