Update task names in amazon_eda

--- a/amazon/amazon_eda.ipynb
+++ b/amazon/amazon_eda.ipynb
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from ltv_train;"
+    "from user_ltv_train;"
    ]
   },
   {
@@ -246,7 +246,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "from ltv_val;"
+    "from user_ltv_val;"
    ]
   },
   {
@@ -345,7 +345,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from churn_train;"
+    "from user_churn_train;"
    ]
   },
   {
@@ -508,7 +508,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "from churn_val;"
+    "from user_churn_val;"
    ]
   },
   {
@@ -586,7 +586,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from product_ltv_train;"
+    "from item_ltv_train;"
    ]
   },
   {
@@ -766,7 +766,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "from product_ltv_val;"
+    "from item_ltv_val;"
    ]
   },
   {
@@ -859,7 +859,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from product_churn_train;"
+    "from item_churn_train;"
    ]
   },
   {
@@ -934,7 +934,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "from product_churn_val;"
+    "from item_churn_val;"
    ]
   },
   {
