Update names in amazon task notebooks

--- a/amazon/item-churn/item-churn.ipynb
+++ b/amazon/item-churn/item-churn.ipynb
@@ -102,7 +102,7 @@
     }
    ],
    "source": [
-    "with open('amazon/product-churn/feats.sql', 'r') as f:\n",
+    "with open('amazon/item-churn/feats.sql', 'r') as f:\n",
     "    # run once with train_labels and once with val_labels\n",
     "    template = f.read()\n",
     "\n",
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "utils.validate_feature_tables('product_churn', conn)"
+    "utils.validate_feature_tables('item_churn', conn)"
    ]
   },
   {
@@ -159,7 +159,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from product_churn_train_feats"
+    "from item_churn_train_feats"
    ]
   },
   {
@@ -447,7 +447,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "select * from product_churn_val_feats;"
+    "select * from item_churn_val_feats;"
    ]
   },
   {
