--- a/amazon/item-ltv/item-ltv.ipynb
+++ b/amazon/item-ltv/item-ltv.ipynb
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "with open('amazon/product-ltv/feats.sql', 'r') as f:\n",
+    "with open('amazon/item-ltv/feats.sql', 'r') as f:\n",
     "    # run once with train_labels and once with val_labels\n",
     "    template = f.read()\n",
     "\n",
@@ -138,7 +138,7 @@
     }
    ],
    "source": [
-    "utils.validate_feature_tables('product_ltv', conn)"
+    "utils.validate_feature_tables('item_ltv', conn)"
    ]
   },
   {
@@ -688,7 +688,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "select * from product_ltv_val_feats;"
+    "select * from item_ltv_val_feats;"
    ]
   },
   {
