--- a/amazon/user-churn/user-churn.ipynb
+++ b/amazon/user-churn/user-churn.ipynb
@@ -101,7 +101,7 @@
     }
    ],
    "source": [
-    "with open('amazon/churn/feats.sql', 'r') as f:\n",
+    "with open('amazon/user-churn/feats.sql', 'r') as f:\n",
     "    # run once with train_labels and once with val_labels\n",
     "    template = f.read()\n",
     "\n",
@@ -141,7 +141,7 @@
     }
    ],
    "source": [
-    "utils.validate_feature_tables('churn', conn)"
+    "utils.validate_feature_tables('user_churn', conn)"
    ]
   },
   {
@@ -448,7 +448,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "select * from churn_val_feats;"
+    "select * from user_churn_val_feats;"
    ]
   },
   {
