--- a/amazon/user-ltv/user-ltv.ipynb
+++ b/amazon/user-ltv/user-ltv.ipynb
@@ -101,7 +101,7 @@
     }
    ],
    "source": [
-    "with open('amazon/ltv/feats.sql', 'r') as f:\n",
+    "with open('amazon/user-ltv/feats.sql', 'r') as f:\n",
     "    # run once with train_labels and once with val_labels\n",
     "    template = f.read()\n",
     "\n",
@@ -141,7 +141,7 @@
     }
    ],
    "source": [
-    "utils.validate_feature_tables('ltv', conn)"
+    "utils.validate_feature_tables('user_ltv', conn)"
    ]
   },
   {
@@ -794,7 +794,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "select * from ltv_val_feats;"
+    "select * from user_ltv_val_feats;"
    ]
   },
   {
