Update name in stack eda nb

--- a/stack/stack_exchange_eda.ipynb
+++ b/stack/stack_exchange_eda.ipynb
@@ -333,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "task = dataset.get_task('user-votes', process=True)"
+    "task = dataset.get_task('post-votes', process=True)"
    ]
   },
   {
