Update names in stack task notebooks

--- a/stack/post-votes/votes.ipynb
+++ b/stack/post-votes/votes.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "import utils\n",
     "\n",
-    "conn = duckdb.connect('stack_exchange/stackex.db')\n",
+    "conn = duckdb.connect('stack/stack.db')\n",
     "%load_ext sql\n",
     "%sql conn --alias duckdb\n",
     "%config SqlMagic.displaycon=False\n",
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "with open('stack_exchange/votes/feats.sql', 'r') as f:\n",
+    "with open('stack/post-votes/feats.sql', 'r') as f:\n",
     "    # run once with train_labels and once with val_labels\n",
     "    template = f.read()\n",
     "\n",
@@ -129,7 +129,7 @@
     }
    ],
    "source": [
-    "utils.validate_feature_tables('votes', conn)"
+    "utils.validate_feature_tables('post_votes', conn)"
    ]
   },
   {
@@ -139,7 +139,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from votes_train_feats"
+    "from post_votes_train_feats"
    ]
   },
   {
@@ -399,7 +399,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "select * from votes_val_feats;"
+    "select * from post_votes_val_feats;"
    ]
   },
   {
