--- a/stack/user-badge/badges.ipynb
+++ b/stack/user-badge/badges.ipynb
@@ -102,7 +102,7 @@
     "\n",
     "import utils\n",
     "\n",
-    "conn = duckdb.connect('stack_exchange/stackex.db')\n",
+    "conn = duckdb.connect('stack/stack.db')\n",
     "%load_ext sql\n",
     "%sql conn --alias duckdb\n",
     "%config SqlMagic.displaycon=False\n",
@@ -128,7 +128,7 @@
     }
    ],
    "source": [
-    "with open('stack_exchange/badges/feats.sql', 'r') as f:\n",
+    "with open('stack/user-badge/feats.sql', 'r') as f:\n",
     "    # run once with train_labels and once with val_labels\n",
     "    template = f.read()\n",
     "\n",
@@ -168,7 +168,7 @@
     }
    ],
    "source": [
-    "utils.validate_feature_tables('badges', conn)"
+    "utils.validate_feature_tables('user_badge', conn)"
    ]
   },
   {
@@ -185,7 +185,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from badges_train_feats"
+    "from user_badge_train_feats"
    ]
   },
   {
@@ -597,7 +597,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "select * from badges_val_feats;"
+    "select * from user_badge_val_feats;"
    ]
   },
   {
