--- a/stack/user-engagement/engage.ipynb
+++ b/stack/user-engagement/engage.ipynb
@@ -124,7 +124,7 @@
     "\n",
     "import utils\n",
     "\n",
-    "conn = duckdb.connect('stack_exchange/stackex.db')\n",
+    "conn = duckdb.connect('stack/stack.db')\n",
     "%load_ext sql\n",
     "%sql conn --alias duckdb\n",
     "%config SqlMagic.displaycon=False\n",
@@ -150,7 +150,7 @@
     }
    ],
    "source": [
-    "with open('stack_exchange/engage/feats.sql', 'r') as f:\n",
+    "with open('stack/user-engagement/feats.sql', 'r') as f:\n",
     "    # run once with train_labels and once with val_labels\n",
     "    template = f.read()\n",
     "\n",
@@ -189,7 +189,7 @@
     }
    ],
    "source": [
-    "utils.validate_feature_tables('engage', conn)"
+    "utils.validate_feature_tables('user_engagement', conn)"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from engage_train_feats"
+    "from user_engagement_train_feats"
    ]
   },
   {
@@ -650,7 +650,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "select * from engage_val_feats;"
+    "select * from user_engagement_val_feats;"
    ]
   },
   {
