Update names in hm_eda notebook

--- a/hm/hm_eda.ipynb
+++ b/hm/hm_eda.ipynb
@@ -56,7 +56,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from churn_train"
+    "from user_churn_train"
    ]
   },
   {
@@ -224,7 +224,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "from churn_val;"
+    "from user_churn_val;"
    ]
   },
   {
@@ -303,7 +303,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from sales_train"
+    "from item_sales_train"
    ]
   },
   {
@@ -486,7 +486,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "from sales_val"
+    "from item_sales_val"
    ]
   },
   {
