Renaming in hm task notebooks

--- a/hm/item-sales/sales.ipynb
+++ b/hm/item-sales/sales.ipynb
@@ -87,7 +87,7 @@
     }
    ],
    "source": [
-    "with open('hm/sales/feats.sql', 'r') as f:\n",
+    "with open('hm/item-sales/feats.sql', 'r') as f:\n",
     "    # run once with train_labels and once with val_labels\n",
     "    template = f.read()\n",
     "\n",
@@ -126,7 +126,7 @@
     }
    ],
    "source": [
-    "utils.validate_feature_tables('sales', conn)"
+    "utils.validate_feature_tables('item_sales', conn)"
    ]
   },
   {
@@ -136,7 +136,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from sales_train_feats"
+    "from item_sales_train_feats"
    ]
   },
   {
@@ -567,7 +567,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "select * from sales_val_feats;"
+    "select * from item_sales_val_feats;"
    ]
   },
   {
