--- a/hm/user-churn/churn.ipynb
+++ b/hm/user-churn/churn.ipynb
@@ -101,7 +101,7 @@
     }
    ],
    "source": [
-    "with open('hm/churn/feats.sql', 'r') as f:\n",
+    "with open('hm/user-churn/feats.sql', 'r') as f:\n",
     "    # run once with train_labels and once with val_labels\n",
     "    template = f.read()\n",
     "\n",
@@ -140,7 +140,7 @@
     }
    ],
    "source": [
-    "utils.validate_feature_tables('churn', conn)"
+    "utils.validate_feature_tables('user_churn', conn)"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from churn_train_feats"
+    "from user_churn_train_feats"
    ]
   },
   {
@@ -736,7 +736,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "select * from churn_val_feats;"
+    "select * from user_churn_val_feats;"
    ]
   },
   {
