Update name in f1 eda nb

--- a/f1/f1_eda.ipynb
+++ b/f1/f1_eda.ipynb
@@ -41,7 +41,7 @@
    "source": [
     "## Tasks\n",
     "\n",
-    "### `rel-f1-position`\n",
+    "### `rel-f1-driver-position`\n",
     "\n",
     "Task is to predict the average finishing position of each driver all races in the next 2 months.\n",
     "\n",
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from position_train"
+    "from driver_position_train"
    ]
   },
   {
@@ -238,7 +238,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "from position_val"
+    "from driver_position_val"
    ]
   },
   {
@@ -355,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `rel-f1-dnf`\n",
+    "### `rel-f1-driver-dnf`\n",
     "\n",
     "Task is to predict whether a driver will DNF (not finish) a race in the next 1 month.\n",
     "\n",
@@ -371,7 +371,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from dnf_train"
+    "from driver_dnf_train"
    ]
   },
   {
@@ -453,7 +453,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "from dnf_val"
+    "from driver_dnf_val"
    ]
   },
   {
@@ -556,7 +556,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### `rel-f1-qualifying`\n",
+    "### `rel-f1-driver-top3`\n",
     "\n",
     "Task is to predict if each driver will qualify in the top-3 for a race within the next 1 month.\n",
     "\n",
@@ -572,7 +572,7 @@
    "outputs": [],
    "source": [
     "%%sql train_df <<\n",
-    "from qualifying_train"
+    "from driver_top3_train"
    ]
   },
   {
@@ -733,7 +733,7 @@
    "outputs": [],
    "source": [
     "%%sql val_df <<\n",
-    "from qualifying_val"
+    "from driver_top3_val"
    ]
   },
   {
